--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,8 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
     implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
     implementation("androidx.legacy:legacy-support-v4:1.0.0")
+
+    // GLIDE
+    implementation 'com.google.code.gson:gson:2.10.1'
+
 }
