--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,16 +46,21 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     // ExoPlayer
-    implementation "androidx.media3:media3-exoplayer:1.0.2"
-    implementation "androidx.media3:media3-exoplayer-dash:1.0.2"
-    implementation "androidx.media3:media3-ui:1.0.2"
+    def exoplayer_version = "1.0.2"
+    implementation "androidx.media3:media3-exoplayer:$exoplayer_version"
+    implementation "androidx.media3:media3-exoplayer-dash:$exoplayer_version"
+    implementation "androidx.media3:media3-ui:$exoplayer_version"
+
+    // Work
+    def work_version = "2.8.1"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
 
     // Jetpack Navigation
-    implementation("androidx.navigation:navigation-fragment-ktx:2.5.3")
-    implementation("androidx.navigation:navigation-ui-ktx:2.5.3")
+    implementation("androidx.navigation:navigation-fragment-ktx:2.6.0")
+    implementation("androidx.navigation:navigation-ui-ktx:2.6.0")
     implementation("androidx.legacy:legacy-support-v4:1.0.0")
 
-    // GLIDE
+    // GSON
     implementation 'com.google.code.gson:gson:2.10.1'
 
 }
